--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,6 @@
         my-app
     </title></head>
     <body>
-        <div id="app"></div>
+        <div id="app">hiii</div>
     </body>
 </html>
